Correction in Tech Store map. Fixed turn left to turn right

--- a/resources/techstore.html
+++ b/resources/techstore.html
@@ -89,7 +89,7 @@
 <h2>Directions</h2>
 
 <ol>
-<li><p>Turn left of Gordon Wiley Building</p>
+<li><p>Turn right of Gordon Wiley Building</p>
 
 <p> <img src="/images/techstore_map/0.jpg" alt="/images/techstore_map/0.jpg" /></p></li>
 <li><p>Enter I Wing</p>
